add logic import excel

--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,11 @@
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <!--    TODO Add migration tool database-->
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
